--- a/filme1.html
+++ b/filme1.html
@@ -19,7 +19,7 @@
 
     <header class="cabecario">
         <ul class="cabecario__lista">
-            <li><img src="img/Nlogo.png" alt="Netflix logo" class="nlogo"><img src="img/Netflix_logo.png" alt="Netflix logo" class="cabecario__item container__logo sumir__mobile"></li>
+            <li><img src="Background-principal.png" alt="Netflix logo" class="nlogo"><img src="img/Netflix_logo.png" alt="Netflix logo" class="cabecario__item container__logo sumir__mobile"></li>
             <li class="cabecario__item"><a href="principal.html" class="cabecario__link">Início</a></li>
             <li class="cabecario__item"><a href="principal.html" class="cabecario__link">Séries</a></li>
             <li class="cabecario__item"><a href="principal.html" class="cabecario__link">Filmes</a></li>
