--- a/principal.html
+++ b/principal.html
@@ -24,7 +24,7 @@
             <li class="cabecario__item"><a href="principal.html" class="cabecario__link">Início</a></li>
             <li class="cabecario__item"><a href="principal.html" class="cabecario__link">Séries</a></li>
             <li class="cabecario__item"><a href="principal.html" class="cabecario__link">Filmes</a></li>
-            <li class="cabecario__item mobile__sumir"><a href="principal.html" class="cabecario__link">Minha lista</a></li>
+            <li class="cabecario__item mobile__sumir"><a href="principal.html" class="cabecario__link">Amo voce maria <3</a></li>
         </ul>
     </header>
 
@@ -32,8 +32,7 @@
 
     <section class="container__background">
         <img src="img/Titulo.png" alt="Titulo" class="container__titulo">
-        <p class="container__texto__mobile">O filme de romance aclamado pela<br> crítica, com recordes de venda em<br> bilheteria, considerado uns dos<br> melhores filmes de romance.</p>
-        <p class="container__texto mobile__sumir">Acompanhe nesse filme a hístoria de dois adolescentes do<br> ensino médio e todos seus momentos juntos. Nesse filme<br> temos a participação de Lívia e Felipe.</p>
+        <p class="container__texto mobile__sumir">Um pequeno resumo de como uma vida inteira se inicia<br> por meio de joguinhos online. Nesse filme<br> temos da princesa Maria Eduarda e o sapo Higor Lima.</p>
         <div class="container__botao">
             <a href="filme5.html" class="botao__assistir"><img src="img/Play.png" class="play">Assistir</a> 
             <button class="botao__assistir info"><img src="img/info.png" class="play"><p class="mais__info">Mais Informações</p></button>    
@@ -49,23 +48,18 @@
             <li class="container__video">
                 <a href="filme1.html">
                     <img src="img/video1.png" alt="Video" class="cropped">
-                    <div class="desc">Dois Malucos No Pedaço</div>
+                    <div class="desc">Interestelar
+                    </div>
                 </a>
             </li>
 
             <li class="container__video">
                 <a href="filme2.html">
                     <img src="img/video2.png" alt="Video" class="cropped">
-                    <div class="desc">Piscicopata Americana</div>
+                    <div class="desc">A minha princesa</div>
                 </a>
             </li>
 
-            <li class="container__video">
-                <a href="filme3.html">
-                    <img src="img/video3.png" alt="Video" class="cropped">
-                    <div class="desc">A Princesa e o Sapo</div>
-                </a>
-            </li>
 
             <li class="container__video">
                 <a href="filme4.html">
@@ -99,7 +93,7 @@
             <li class="container__video">
                 <a href="filme2.html">
                     <img src="img/video2.png" alt="Video" class="cropped">
-                    <div class="desc">Piscicopata Americana</div>
+                    <div class="desc">A minha princesa</div>
                 </a>
             </li>
 
@@ -120,21 +114,14 @@
             <div class="container__video carrossel_item">
                 <a href="filme1.html">
                     <img src="img/video1.png" alt="Video" class="cropped">
-                    <div class="desc">Dois Malucos No Pedaço</div>
+                    <div class="desc">Interestelar</div>
                 </a>
             </div>
 
             <div class="container__video carrossel_item">
                 <a href="filme2.html">
                     <img src="img/video2.png" alt="Video" class="cropped">
-                    <div class="desc">Piscicopata Americana</div>
-                </a>
-            </div>
-
-            <div class="container__video carrossel_item">
-                <a href="filme3.html">
-                    <img src="img/video3.png" alt="Video" class="cropped">
-                    <div class="desc">A Princesa e o Sapo</div>
+                    <div class="desc">A minha princesa</div>
                 </a>
             </div>
 
@@ -168,7 +155,7 @@
 <!--RODAPE DA PAGINA-->
 
     <footer class="rodape">
-        <h2 class="rodape__texto">Em breve mais coisas(ou não)</h2> 
+        <h2 class="rodape__texto">Cada momento novo, vira um filme novo.</h2> 
     </footer>
 </body>
 </html>
