primeira de muitas

--- a/filme4.html
+++ b/filme4.html
@@ -35,7 +35,7 @@
 <!--RODAPE-->
 
     <footer class="rodape">
-        <h2 class="rodape__texto">Em breve mais coisas(ou não)</h2> 
+        <h2 class="rodape__texto">Cada momento novo, vira um filme novo.</h2> 
     </footer>
 </body>
 </html>
