primeira de muitas

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1 class="escolha__texto">Quem está assistindo?</h1>
         <ul class="escolha__perfil">
             <li class="escolha__lista">
-                <a href="principal.html" class="perfil"><img src="img/Perfil.jpg" alt="Foto de perfil" class="perfil__foto"></a>
+                <a href="principal.html" class="perfil"><img src="img/Perfil.png" alt="Foto de perfil" class="perfil__foto"></a>
                 <p class="perfil__texto">Eduarda</p>
             </li>
 
